# DatasetTrace

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: api_config.json  api_server.py  query.py  ui.py
infini-gram-mini/engine/src/: cpp_engine.cpp  cpp_engine.h  engine.py  models.py
infini-gram-mini/indexing/: indexing.py
infini-gram-mini/indexing/cpp/: indexing.cpp
scripts/: build_apptainer.sh  index_parquet.sh  index_parquet_array.sh  index_v2_parquet.sh  infini_gram_mini.def
