[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infini-gram-mini"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pybind11",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["infini-gram-mini"]
include = ["indexing*", "engine*"]
